--- a/SComputers/addons.html
+++ b/SComputers/addons.html
@@ -12,7 +12,7 @@
             <h1>SComputers - Addon List</h1>
             
             </br>
-            <div class="cool-frame" style="width: 50%;">
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
                     <h2>Controllers</h2>
                     <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3154734887">
@@ -43,7 +43,7 @@
 
 
             </br>
-            <div class="cool-frame" style="width: 50%;">
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
                     <h2>power toys</h2>
                     <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3131135318">
@@ -68,7 +68,7 @@
 
             </br>
             <a name="stretchable_display"></a>
-            <div class="cool-frame" style="width: 50%;">
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
                     <h2>stretchable display</h2>
                     <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3293308025">
@@ -88,7 +88,7 @@
 
 
             </br>
-            <div class="cool-frame" style="width: 50%;">
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
                     <a name="more_displays"></a>
                     <h2>more displays</h2>
@@ -111,7 +111,7 @@
 
             </br>
             <a name="world_disks"></a>
-            <div class="cool-frame" style="width: 50%;">
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
                     <h2>world disks</h2>
                     <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3329906376">
@@ -138,7 +138,7 @@
 
             </br>
             <a name="online_boombox"></a>
-            <div class="cool-frame" style="width: 50%;">
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
                     <h2>online boombox</h2>
                     <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3185287679">
@@ -162,8 +162,30 @@
 
 
             </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>decorative gizmos</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3360519967">
+                        <img src="addons/decorative_gizmos.jpg" class="image" />
+                    </a>
+
+                    </br>
+                    <p class="cool-text" class="text">
+                        allows you to capture an image from your real monitor or game and stream it to other players via SComputers.</br>
+                        requires a betterAPI version of at least 44.</br>
+                        the mod is safe as betterAPI requires capture confirmation from the user.
+                    </p>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3360519967', '_blank').focus();">download addon from steam</button>
+                </center>
+            </div>
+
+
+
+            </br>
             <a name="minimap_component"></a>
-            <div class="cool-frame" style="width: 50%;">
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
                     <h2>minimap component</h2>
                     <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3360952754">
@@ -182,6 +204,67 @@
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3360952754', '_blank').focus();">download addon from steam</button>
                     <button class="cool-button red" onclick="window.location.href = 'minimap_component.html'">api documentation</button>
+                </center>
+            </div>
+
+
+
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>capture mod</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3422770337">
+                        <img src="addons/capture_mod.jpg" class="image" />
+                    </a>
+
+                    </br>
+                    <p class="cool-text" class="text">
+                        allows you to capture an image from your real monitor or game and stream it to other players via SComputers.</br>
+                        requires a betterAPI version of at least 44.</br>
+                        the mod is safe as betterAPI requires capture confirmation from the user.
+                    </p>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3422770337', '_blank').focus();">download addon from steam</button>
+                </center>
+            </div>
+
+            
+
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>brainf_ck language</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3456085812">
+                        <img src="addons/brainf_ck_language.jpg" class="image" />
+                    </a>
+
+                    </br>
+                    <p class="cool-text" class="text">
+                        this addon for SComputers adds a computer running on the brainf*ck programming language!</br>
+                        </br>
+                        the "." operator outputs values to the bf_output register and to the logPrint.</br>
+                        the "," operator takes values from the bf_input register, if there is none, then from the first input connected to the computer.</br>
+                        </br>
+                        a computer can execute up to 100000 brainf*ck instructions in one tick.</br>
+                        to complete the execution in this tick, use the "," operator while reading input, the computer does nothing else and waits for the next tick.</br>
+                        </br>
+                        to interact with the rest of the peripheral, use lua-invoke. to do this, output the lua-invoke as a string in "." it should start with byte 1 and end with byte 0.</br>
+                        there is a special python script in the mod files for automatic lua-invoke generation: Scripts/examples/luaInvokeGenerator.py</br>
+                        for luaInvokeGenerator.py to work, when calling lua-invoke, the selected memory location must have a value of 0. after completing lua-invoke, 0 will remain in this cell.</br>
+                        lua-invoke gets the brainf*ck memory table as the first argument, which is indexed from 0.</br>
+                        this allows data exchange between lua and brainf*ck.</br>
+                        please do not write anything there except integers from 0 to 255, as this will lead to UB</br>
+                        </br>
+                        if you run a ready-made program on brainf*ck, it will output its result to the computer console and chat.</br>
+                        and accept input from the bf_input register, or if there is none, then from the first connected input.</br>
+                        if you do not need output to the chat,</br>
+                        then you can implement your output function using lua-invoke or disable output to the chat in the mod's Permission Tool</br>
+                        (in this case, output will continue to bf_output and to the computer console)
+                    </p>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3456085812', '_blank').focus();">download addon from steam</button>
                 </center>
             </div>
         </center>
