--- a/SComputers/api.html
+++ b/SComputers/api.html
@@ -29,7 +29,7 @@
             <br/>
             you can configure how much the computer can "delay" the game-tick in the "Permission Tool" (by default: 4 ticks)
             <br/>
-            if you install the <a class="hyper" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3177944610">betterAPI</a> dll mod, SComputers will use native lua, which will significantly increase performance.
+            if you install the <a class="hyper" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3177944610" target="_blank">betterAPI</a> dll mod, SComputers will use native lua, which will significantly increase performance.
         </p>
 
         <p>
@@ -58,7 +58,7 @@
         <br/>
         <p class="text">recommendations</p>
         <ul class="list">
-            <li><span>it is recommended to install a dll mod: <a class="hyper" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3177944610">betterAPI</a> this will increase the mod's performance and add new functionality</span></li>
+            <li><span>it is recommended to install a dll mod: <a class="hyper" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3177944610" target="_blank">betterAPI</a> this will increase the mod's performance and add new functionality</span></li>
             <li><span>if the antenna on your device works only for receiving then you can put an NFC antenna, the antenna radius affects only the transmission</span></li>
             <li><span>it is not necessary to update the display every clock cycle, often it does not make sense. in most cases, updating 4 times per second will be enough, for this it is enough to insert "if <a href="env.html#getTick" class="hyper">getTick()</a> % 4 == 0 then --[[display update code]] end" at your program</span></li>
         </ul>
