--- a/logichub/index.html
+++ b/logichub/index.html
@@ -103,7 +103,7 @@
                     </div>
 
                     </br>
-                    <button class="cool-button red" onclick="window.open('https://igorkll.github.io/betterAPI/', '_blank').focus();">project page</button>
+                    <button class="cool-button red" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3353025650', '_blank').focus();">project page</button>
                 </center>
             </div>
 
