try fix back button

--- a/SComputers/addons.html
+++ b/SComputers/addons.html
@@ -35,7 +35,7 @@
 
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3154734887', '_blank').focus();">download addon from steam</button>
-                    <button class="cool-button red" onclick="window.location.href = 'https://thedimondk.github.io/Controllers_SComputersAddon'">api documentation</button>
+                    <button class="cool-button red" onclick="window.location.href = 'https://thedimondk.github.io/Controllers_SComputersAddon'">api reference</button>
                 </center>
             </div>
 
@@ -154,7 +154,7 @@
 
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3185287679', '_blank').focus();">download addon from steam</button>
-                    <button class="cool-button red" onclick="window.location.href = 'onlineBoombox.html'">api documentation</button>
+                    <button class="cool-button red" onclick="window.location.href = 'onlineBoombox.html'">api reference</button>
                 </center>
             </div>
 
@@ -202,7 +202,7 @@
 
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3360952754', '_blank').focus();">download addon from steam</button>
-                    <button class="cool-button red" onclick="window.location.href = 'minimap_component.html'">api documentation</button>
+                    <button class="cool-button red" onclick="window.location.href = 'minimap_component.html'">api reference</button>
                 </center>
             </div>
 
