--- a/logichub/index.html
+++ b/logichub/index.html
@@ -8,9 +8,19 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
-        <center>
-            <h1>Logic Hub</h1>
+        <div class="cool-block">
+            <div class="barimage"><img src="favicon.png" alt="logic image"/></div>
+            <div class="barimage"><img src="bananapen.png" alt="bananapen image"/></div>
+            <h1 style="margin: 5px;">Logic Hub</h1>
+            <div style="margin-left: auto; display: flex;">
+                <div class="image-button" onclick="window.open('https://discord.com/users/804098593002618881', '_blank');"><img src="icons/discord.png"/></div>
+                <div class="image-button" onclick="window.open('https://discord.gg/uJrsmUjaMG', '_blank');"><img src="icons/discord_server.png"/></div>
+                <div class="image-button" onclick="window.open('https://steamcommunity.com/profiles/76561198977226540/', '_blank');"><img src="icons/steam.png"/></div>
+                <div class="image-button" onclick="window.open('http://github.com/igorkll', '_blank');"><img src="icons/github.png"/></div>
+            </div>
+        </div>
 
+        <center>    
             <p class="cool-text">
                 I'm logic on Discord, and BananaPen on steam!</br>
                 on github, my nickname is igorkll. Historically, I have a lot of nicknames, I think it's too late to change anything.</br>
