--- a/SComputers/addons.html
+++ b/SComputers/addons.html
@@ -33,6 +33,10 @@
                         Controllers (дополнение для SComputers) - небольшой аддон для мода SComputers [FORK], который позволит вам реализовать любые механизмы с помощью программируемых контроллеров, позволяющих изменять углы поворотов каждого подшипника, и даже длину подключенных поршней! Если вам понравилось дополнение, пожалуйста, оцените его лайком.
                     </p>
 
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
+
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3154734887', '_blank').focus();">download addon from steam</button>
                     <button class="cool-button red" onclick="window.location.href = 'https://thedimondk.github.io/Controllers_SComputersAddon'">api reference</button>
@@ -58,6 +62,10 @@
                         SComputers power toys - это дополнение для SComputers, которые добавляет в игру различные имбалансные предметы.
                     </p>
 
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
+
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3131135318', '_blank').focus();">download addon from steam</button>
                 </center>
@@ -78,6 +86,10 @@
                     <p class="cool-text">
                         allows you to create displays of any size and resolution right inside the game.
                     </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
 
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3293308025', '_blank').focus();">download addon from steam</button>
@@ -100,6 +112,10 @@
                     <p class="cool-text">
                         more displays for SComputers. there is a wide range of aspect ratios and resolutions from 80x60 to 4k 21x9
                     </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
 
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3344779247', '_blank').focus();">download addon from steam</button>
@@ -128,6 +144,10 @@
                         however, you will not be able to use these disks to transfer files through the workshop.<br/>
                     </p>
 
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
+
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3329906376', '_blank').focus();">download addon from steam</button>
                 </center>
@@ -152,8 +172,12 @@
                         direct links to streaming Internet radio stations will also work (however, connecting to a streaming radio station can take a long time and not the first time).<br/>
                     </p>
 
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(255, 196, 0);">mod with SComputers support</span>
+                    </div>
+
                     </br>
-                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3185287679', '_blank').focus();">download addon from steam</button>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3185287679', '_blank').focus();">download mod from steam</button>
                     <button class="cool-button red" onclick="window.location.href = 'onlineBoombox.html'">api reference</button>
                 </center>
             </div>
@@ -174,6 +198,10 @@
                         requires a betterAPI version of at least 44.</br>
                         the mod is safe as betterAPI requires capture confirmation from the user.
                     </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
 
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3360519967', '_blank').focus();">download addon from steam</button>
@@ -200,6 +228,10 @@
                         supports isometric rendering
                     </p>
 
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
+
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3360952754', '_blank').focus();">download addon from steam</button>
                     <button class="cool-button red" onclick="window.location.href = 'minimap_component.html'">api reference</button>
@@ -222,6 +254,10 @@
                         requires a betterAPI version of at least 44.</br>
                         the mod is safe as betterAPI requires capture confirmation from the user.
                     </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
 
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3422770337', '_blank').focus();">download addon from steam</button>
@@ -262,8 +298,37 @@
                         (in this case, output will continue to bf_output and to the computer console)
                     </p>
 
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
+
                     </br>
                     <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3456085812', '_blank').focus();">download addon from steam</button>
+                </center>
+            </div>
+
+
+
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>MT Fast Logic</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3100500975">
+                        <img src="addons/mt_fast_logic.jpg" class="image" />
+                    </a>
+
+                    </br>
+                    <p class="cool-text">
+                        Fast Logic</br>
+                        With great optimization, comes great speed. Fast logic provides significant acceleration compared to vanilla logic gates and makes the use of logic for practical purposes much more viable.
+                    </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(255, 196, 0);">mod with SComputers support</span>
+                    </div>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3100500975', '_blank').focus();">download mod from steam</button>
                 </center>
             </div>
         </center>
