added translator to logichub

--- a/logichub/index.html
+++ b/logichub/index.html
@@ -12,6 +12,7 @@
             <div class="barimage"><img src="favicon.png" alt="logic image"/></div>
             <div class="barimage"><img src="bananapen.png" alt="bananapen image"/></div>
             <h1 style="margin: 5px;">Logic Hub</h1>
+            <div id="google_translate_element" style="position: absolute;top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
             <div style="margin-left: auto; display: flex;">
                 <div class="image-button" onclick="window.open('https://discord.com/users/804098593002618881', '_blank');"><img src="icons/discord.png"/></div>
                 <div class="image-button" onclick="window.open('https://discord.gg/uJrsmUjaMG', '_blank');"><img src="icons/discord_server.png"/></div>
@@ -169,6 +170,8 @@
             </div>
         </center>
     
+        <script async src="https://cse.google.com/cse.js?cx=319af69f537d9450e"></script>
+        <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         <script src="main.js"></script>
     </body>
 </html>
