update betterAPI description in logichub

--- a/logichub/index.html
+++ b/logichub/index.html
@@ -73,11 +73,16 @@
                     <div class="cool-text">
                         this API adds additional methods to the game.</br>
                         however, it does not provide full access to the lua API.</br>
-                        this mod implements methods such as "loadstring" and "loadfile", however, bytecode loading is not available and the transfer of the user's ENV is mandatory.</br>
-                        if someone has found a vulnerability here, PLEASE let me know.</br>
-                        vulnerability is considered to be any opportunity to execute arbitrary code, as well as to use the filesystem outside the "BetterFS" directory and game mods.</br>
-                        my plans are to implement a framework for creating screens and integrate with the browser and "Visual Studio Code".</br>
-                        betterAPI is also able to speed up the execution of lua code in the game, as it uses a newer version of luajit.</br>
+                        this mod expands the capabilities of the game API by adding additional features for use by other mods.</br>
+                        betterAPI has a built-in package manager with extensions. to open it, write to the chat /better</br>
+                        </br>
+                        manual installation:</br>
+                        1. close scrap mechanic</br>
+                        2. subscribe to the mod</br>
+                        3. open folder: Steam\steamapps\workshop\content\387990\3177944610\content</br>
+                        4. copy all files</br>
+                        5. open folder: Steam\steamapps\common\Scrap Mechanic\Release</br>
+                        6. insert all the files with the replacement</br>
                     </div>
 
                     </br>
