--- a/SComputers/gui.html
+++ b/SComputers/gui.html
@@ -153,16 +153,18 @@
             <li><span>guiobject:setOffsetPosition(guiobject, offsetX:number, offsetY:number) - sets the position of one element relative to the position of another element</span></li>
             <li><span>guiobject:setOffsetPositionX(guiobject, offsetX:number) - sets the position of one element relative to the position of another element</span></li>
             <li><span>guiobject:setOffsetPositionY(guiobject, offsetY:number) - sets the position of one element relative to the position of another element</span></li>
-            <li><span>guiobject:setLeft(guiobject, padding (default: 1)) - sets the position of one element relative to the position of another element</span></li>
-            <li><span>guiobject:setRight(guiobject, padding (default: 1)) - sets the position of one element relative to the position of another element</span></li>
-            <li><span>guiobject:setUp(guiobject, padding (default: 1)) - sets the position of one element relative to the position of another element</span></li>
-            <li><span>guiobject:setDown(guiobject, padding (default: 1)) - sets the position of one element relative to the position of another element</span></li>
-            <li><span>guiobject:setCenterLeft(guiobject, padding (default: 1)) - sets the position of one element relative to the position of another element. centers on a different coordinate</span></li>
-            <li><span>guiobject:setCenterRight(guiobject, padding (default: 1)) - sets the position of one element relative to the position of another element. centers on a different coordinate</span></li>
-            <li><span>guiobject:setCenterUp(guiobject, padding (default: 1)) - sets the position of one element relative to the position of another element. centers on a different coordinate</span></li>
-            <li><span>guiobject:setCenterDown(guiobject, padding (default: 1)) - sets the position of one element relative to the position of another element. centers on a different coordinate</span></li>
+            <li><span>guiobject:setLeft(guiobject, offset (default: 1)) - sets the position of one element relative to the position of another element</span></li>
+            <li><span>guiobject:setRight(guiobject, offset (default: 1)) - sets the position of one element relative to the position of another element</span></li>
+            <li><span>guiobject:setUp(guiobject, offset (default: 1)) - sets the position of one element relative to the position of another element</span></li>
+            <li><span>guiobject:setDown(guiobject, offset (default: 1)) - sets the position of one element relative to the position of another element</span></li>
+            <li><span>guiobject:setCenterLeft(guiobject, offset (default: 1)) - sets the position of one element relative to the position of another element. centers on a different coordinate</span></li>
+            <li><span>guiobject:setCenterRight(guiobject, offset (default: 1)) - sets the position of one element relative to the position of another element. centers on a different coordinate</span></li>
+            <li><span>guiobject:setCenterUp(guiobject, offset (default: 1)) - sets the position of one element relative to the position of another element. centers on a different coordinate</span></li>
+            <li><span>guiobject:setCenterDown(guiobject, offset (default: 1)) - sets the position of one element relative to the position of another element. centers on a different coordinate</span></li>
             <li><span>guiobject:setFontParameters(font:table|nil, sizeX:number|nil, sizeY:number|nil) - sets the font and its size for a specific element</span></li>
             <li><span>guiobject:redraw() - redraw an object right now</span></li>
+            <li><span>guiobject:setBottomLayer() - moves the object to the lowest layer</span></li>
+            <li><span>guiobject:setUpperLayer() - moves the object to the topmost layer</span></li>
         </ul>
 
         <br/>
