--- a/smserver/index.html
+++ b/smserver/index.html
@@ -164,6 +164,7 @@
 			<p>Discord server: <a href="https://discord.gg/uJrsmUjaMG" target="_blank">sm coders community</a></p>
 			<p>Connection: Add the bot as a friend on Steam: <a href="https://steamcommunity.com/profiles/76561199809172866/" target="_blank">sm coders server</a></p>
 			<p>Friend code: <strong>1848907138</strong></p>
+            <p>launch arguments for connection (if for some reason the server is not displayed on game): <strong>-connect_steam_id 76561199809172866 -friend_steam_id 76561199809172866</strong></p>
 		</div>
 	</body>
 </html>
